# test_celentaur

./: Dockerfile  Makefile  README.md  pyproject.toml
celentaur_bindings/: celentaur_bindings.cpp  setup.py
celentaur_sdk/: license
celentaur_sdk/debs/: celantur-cpp-processing_v-1.0.0_x86_64_Ubuntu-22.04-cpu-version.deb
conf/k8s/: spark-default-job.yaml
src/: anonymizer_job.py  run_sdk.py
src/celantur_bindings/: __init__.py  celantur_bindings.cpp  setup.py
src/tests/: test_arguments_parser.py  test_environment_utils.py  test_spark_utils.py
src/utils/: arguments_parser.py  environment_utils.py  spark_utils.py
