[tool.poetry]
name = "pyspark-template"
version = "0.1.0"
description = "PySpark template project with Poetry"
packages = [{include = "src"}]

[tool.poetry.dependencies]
oss2 = "^2.14.0"
python = "^3.10"
pyspark = "3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.14.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.12.0"
pybind11 = ">=2.6.2"
setuptools = ">=40.0.0"
wheel = "*"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
